--- a/01.arashi.html
+++ b/01.arashi.html
@@ -29,6 +29,11 @@
     
     <h2>ARASHI</h2>
 
+    <p>
+        <iframe width="100%" height="630" src="https://www.youtube.com/embed/bGqdS1lBq-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bGqdS1lBq-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+
     <img src="arashi.JPG" width=100% style="margin-top: 10px;">
     
     <h3>information</h3>
