--- a/02.naniwadansi.html
+++ b/02.naniwadansi.html
@@ -29,6 +29,10 @@
     
     <h2>NANIWADANSI</h2>
 
+    <p>
+        <iframe width="100%" height="630" src="https://www.youtube.com/embed/c1H3X6Jqqgs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
+
     <img src="naniwadansi.jpeg" width=100% style="margin-top: 10px;">
     
     <h3>information</h3>
